syntax = "proto3";

package order_service_v1;

option go_package = 'github.com/serenite11/market/proto/services/order_service_v1;order_service_v1';

enum OrderStatus {
  UNEXPECTED_ORDER_STATUS = 0;
  CREATED                 = 1;
  PROCESSING              = 2;
  SUCCESS                 = 3;
  FAILED                  = 4;
  CANCELED                = 5;
}
